# excel-analysis

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-xlsx-flow-phase1.md  2026-06-28-workbook-chat-agent.md
docs/superpowers/specs/: 2026-06-23-xlsx-flow-design.md  2026-06-28-workbook-chat-agent-design.md
samples/: gen_sample.py
tests/: test_cli.py  test_formulas.py  test_gen_sample.py  test_headers.py  test_model.py  test_notes.py  test_powerquery.py  test_preview.py  test_render.py  test_sheets.py  test_smoke.py  test_workbook.py
tests/js/: chat.test.mjs
xlsx_flow/: cli.py  model.py
xlsx_flow/parser/: formulas.py  notes.py  powerquery.py  preview.py  sheets.py  workbook.py
xlsx_flow/render/: html.py
xlsx_flow/render/template/: app.js  chat.js  cytoscape.min.js  index.html  style.css
